versioned_docs/version-2025.2.1/professor/alex_miyamoto_mussi.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Alex Miyamoto Mussi",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Projetos Elétricos Residenciais e Prediais - 2074",
          "size": 4,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "sala_12-2",
          "students": [
            "ELE2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Projetos e Instalações Elétricas - 200",
          "size": 2,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "EIN2023"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Análise de Circuitos (PPC 2020) - 2523",
          "size": 4,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "ELE2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
        ,
        {
          "subject": "Análise de Circuitos - 341",
          "size": 4,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "laboratorio_de_eletricidade_e_eletronica_b4",
          "students": [
            "ELM2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Metodologias Ativas - 2476",
          "size": 2,
          "teachers": [
            "Josiane Paula Maltauro",
            "Renato Lada Guerreiro",
            "Alex Miyamoto Mussi"
          ],
          "classroom": "",
          "students": [
            "EGE2024"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Projeto Integrador - 2211",
          "size": 1,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "AGR2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Projeto Integrador - 2211",
          "size": 1,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "AGR2024"
          ],
          "time": "19:50 - 20:40",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Alex Miyamoto Mussi

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
